--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,19 @@
 plugins {
     id 'java'
-    id 'java-library'
+    id 'maven-publish'
 }
 
-apply plugin: 'maven-publish'
-group 'com.github.sendlime'
-version '1.0-SNAPSHOT'
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'org.gradle.sample'
+            artifactId = 'library'
+            version = '1.1'
+
+            from components.java
+        }
+    }
+}
 
 repositories {
     mavenCentral()
